--- a/PresentationLayer/Views/UserPage/src/App.scss
+++ b/PresentationLayer/Views/UserPage/src/App.scss
@@ -1,6 +1,8 @@
 @use 'styles/main';
 @use 'styles/navbar';
 @use 'styles/bootstrap.min.css';
+@use 'styles/bootstrap-reboot.min.css';
+@use 'styles/bootstrap-grid.min.css';
 *{
   margin: 0;
   padding: 0;
