--- a/PresentationLayer/Views/UserPage/src/styles/_main.scss
+++ b/PresentationLayer/Views/UserPage/src/styles/_main.scss
@@ -1,13 +1,22 @@
 main{
     width: 100%;
-    height: 600px;
     display: flex !important;
     flex-wrap: wrap !important;
-    flex-direction: row !important;
+    @media(max-width:991px){
+        flex-direction: column;
+        section{
+            article{
+                margin-top: 100px;
+            }
+        }
+    }
+    @media(min-width: 992px){
+        flex-direction: row;
+    }
     section{
         width: 90%;
         article{
-            height: 300px;
+            height: 150px;
             h2{
                 text-align: center;
                 margin-top: 20px;
