--- a/PresentationLayer/Views/UserPage/src/styles/_navbar.scss
+++ b/PresentationLayer/Views/UserPage/src/styles/_navbar.scss
@@ -1,25 +1,60 @@
+$liheight: 80px;
+@media(max-width:991px){
+    main{
+        nav{
+            width: 100%;
+            top: 0;
+            flex-direction: row !important;
+            aside{
+                flex-direction: row;
+                ul{
+                    width: 90%;
+                }
+            }
+        }
+    }
+}
+@media(min-width:992px){
+    main{
+        nav{
+            width: 15%;
+            height:100%;
+            left: 0;
+            flex-direction: column !important;
+            aside{
+                flex-direction: column;
+            }
+        }
+    }
+}
 main{
     nav{
-        width: 10%;
         display: flex;
         flex-wrap: wrap;
-        flex-direction: column;
+        position: fixed !important;
         aside{
             display: flex;
             flex-wrap: wrap;
-            flex-direction: column;
-            height: 90%;
+            justify-content: center;
             ul{
-                height: 100%;
                 display: flex;
                 flex-wrap: wrap;
                 flex-direction: column;
+                justify-content: center;
+                li:first-child, li:last-child{
+                    border-radius: 10px 10px 0px 0px;
+                }
+                li:last-child{
+                    border-radius: 0px 0px 10px 10px;
+                }
                 li{
                     display: block;
+                    width: 100%;
+                    height: $liheight;
+                    line-height: $liheight;
                     list-style: none;
-                    border: 2px solid gray;
+                    border: 2px solid black;
                     background-color: gray;
-                    border-radius: 10px;
                     text-align: center;
                     a{
                         text-align: center;
@@ -27,9 +62,7 @@ main{
                         font-weight: bold;
                         text-decoration: none;
                     }
-                    padding: 10px;
-                    margin-top: 10px;
-                    margin-bottom: 10px;
+                    padding: auto;
                 }
             }
         }
